# susflow

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README-ptbr.md  README.md  config.py  debug_ftp.py  debug_import.py  estrutura_repo.txt  pyproject.toml  pytest.ini  run_atlas.py  setup.py  test_drive.py
.github/workflows/: ci.yml
docs/: CHANGELOG_REFACTOR.MD  MIGRATION_RATIONALE.md  cnes.md  pni.md  siasus.md  sihsus.md  sim.md  sinan.md  sinasc.md  sumario.md  summary.md
docs/contributing/: CONTRIBUTING.md
docs/en/: coverage.md  ibge.md  pni.md  siasus.md  sihsus.md  sim.md  sinan.md  sinasc.md  summary.md
docs/pt-br/: CONTRIBUTING.md  README.md  cnes-pt-BR.md  coverage.md  ibge-pt-BR.md  pni-pt-BR.md  siasus-pt-BR.md  sihsus-pt-BR.md  sim-pt-BR.md  sinan-pt-BR.md  sinasc-pt-BR.md  sumario.md
notbooks/: teste.ipynb
notebooks/: teste.ipynb
susflow/: __init__.py  batch.py  cache.py  cli.py  config.py  ftp.py  reader.py  requirements.txt
susflow/core/: cleaner.py  specialties.py  synchronization.py  validator.py
susflow/parsers/: converter.py
susflow/resources/: territory.py
susflow/storage/: local_lake.py
susflow/systems/: __init__.py  base.py  cnes.py  ibge_pop.py  pni.py  sia.py  siasus.py  sih.py  sihsus.py  sim.py  sinan.py  sinasc.py
tests/: COVERAGE.md  teste_download.py
tests/extreme/: test_chaos.py
tests/integration/: test_enrichment.py  test_integration.py  test_integration_ftp.py  test_oncology.py
tests/unit/: test_batch.py  test_cache.py  test_cleaner.py  test_cli.py  test_config.py  test_ftp_more.py  test_reader_engine.py  test_reader_internal.py  test_storage.py  test_systems_cnes.py  test_systems_ibge_pop.py  test_systems_remaining.py  test_systems_sim.py  test_systems_sim_sinasc.py  test_systems_sinan.py  test_validator.py
tools/: commit_pt_br_docs.sh  mapa_ftp.txt  mapa_profundo.txt  mapear_ftp.py
