[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "susflow"
version = "0.1.1"
description = "Acesso programático aos dados do DATASUS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyreaddbc",
    "dbfread",
]

[project.urls]
"Homepage" = "https://github.com/OncoAtlas/susflow"
"PyPI" = "https://pypi.org/project/susflow"