[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tools/mapear_ftp.py" = ["E402"]

[project]
name = "susflow"
version = "0.1.1"
description = "Acesso programático aos dados do DATASUS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyreaddbc",
    "dbfread",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "isort",
    "pytest",
    "pytest-mock",
    "coverage",
    # release / packaging helpers
    "build",
    "twine",
]
polars = ["polars"]
pyarrow = ["pyarrow"]

[project.scripts]
susflow = "susflow.cli:main"

[project.urls]
"Homepage" = "https://github.com/OncoAtlas/susflow"
"PyPI" = "https://pypi.org/project/susflow"